# TheFranchise

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPRINT0_COMPLETION_REPORT.md  demo_complete_integration.py  pyproject.toml  requirements.txt  sprint0_summary.py  test_websocket_monitor.py
.github/workflows/: bug-bot.yml  claude-code-review.yml  claude.yml
draftOps/: PLAYER_DATA_INTEGRATION.md  data_loader.py  run_draft_monitor.py  test_player_data.py
draftOps/docs/: draftops-implementation-plan.md  draftops-overview.md  sprint-1-usage-guide.md  stuff-to-clean.md
draftOps/docs/Specifications/: espn-websocket-protocol-analysis.md  event-message-flow-spec.md  websocket-connection-stability-spec.md  websocket-protocol-mapping-spec.md
draftOps/docs/Specifications/sprint-0/: espn-websocket-protocol-analysis.md  player-id-system-reverse-engineering-spec.md
draftOps/docs/Specifications/sprint-1/: draft-state.md  e2e-draft-logging-and-monitoring.md  websocket-connection-recovery.md
draftOps/docs/Specifications/sprint-2/: draft-specialist-node.md  gm-node.md  langgraph-supervisor-framework-integration.md  player-name-mapping-analysis.md  pre-draft-player-data-setup.md  scout-node-implementation.md  scout-node.md
draftOps/docs/sprint-results/: sprint-0-completion-summary.md  sprint-1-completion-summary.md  sprint-2-summary.md  websocket-recovery-implementation.md
draftOps/hars/: 3picks.har  entered_draft_real.har  first pick.har  firstpick3.har
draftOps/reports/player_id_analysis/: analysis_summary_20250831_102827.json  draft_events_20250831_102827.json  full_websocket_log_20250831_102827.json  player_id_extractions_20250831_102827.json  player_picks_20250831_102827.json
draftOps/src/: data_loader.py
draftOps/src/ai/: README.md  __init__.py  demo.py  draft_supervisor.py  enhanced_draft_state_manager.py  test_enhanced_integration.py  test_supervisor_integration.py
draftOps/src/ai/core/: __init__.py  draft_strategist.py  draft_supervisor.py  gm.py  (+1 more)
draftOps/src/websocket_protocol/: README.md  __init__.py  collect_sample_data.py  config.py  demo_player_cache.db  enhanced_draft_monitor.py  player_id_logger.py  player_resolver.py  poc_draft_logger.py  sprint0_demo.py  test_cross_reference.py  test_player_cache.db
src/thefranchise/: __init__.py
(+66 files in other folders)
