[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draftops"
version = "0.1.0"
description = "Reverse-engineered ESPN draft WebSocket monitor + LangGraph multi-agent draft assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Henry Hobin", email = "henrybhobin@gmail.com"}
]
dependencies = [
    "playwright>=1.40.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.6.6",
    "langchain-openai>=0.3.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

# The real source lives under draftOps/src, which is the import root:
# `ai` and `websocket_protocol` are the two top-level packages.
[tool.setuptools]
py-modules = ["data_loader"]

[tool.setuptools.packages.find]
where = ["draftOps/src"]

[tool.pytest.ini_options]
pythonpath = ["draftOps/src"]
testpaths = [
    "draftOps/src/ai/tests",
    "draftOps/src/websocket_protocol/tests",
]
asyncio_mode = "auto"
addopts = "-q -m 'not liveapi'"
markers = [
    "liveapi: test hits the live OpenAI API; needs OPENAI_API_KEY (deselected by default)",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
